--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400|Poppins:300,400,800&display=swap");
 
 :root {
-	--main-bg: #292F36;
+	--main-bg: #f2f2f2;
 	--main-brand-bg: #ffb510;
 	--main-brand-bg-light: #ffb510;
-	--secondary-bg: #363635;
-	--secondary-brand-bg: #006989;
-	--main-title-color: #e9e9e9;
-	--main-role-color: #ddd;
+	--secondary-bg: #e9e9e9;
+	--secondary-brand-bg: #FFBB29;
+	--main-title-color: #363635;
+	--main-role-color: #292F36;
 }
 
 
@@ -282,7 +282,7 @@ body, html {
     overflow: hidden;
     height: 100%;
     bottom: -1px;
-    background-image: linear-gradient(to top, #86377b 20%, #27273c 80%);
+    background-image: linear-gradient(to top, #B48EAE 10%, #e9e9e9 40%);
 }
 .bgTop {
     z-index: 15;
